--- a/contact-us.html
+++ b/contact-us.html
@@ -2,30 +2,30 @@
 <html>
 
 <head>
-
     <meta charset="utf-8">
-    <title>Starter | Recruitment world Recruitment world</title>
+    <title>Recruitment world</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="Recruitment world" name="description">
     <meta content="Nami" name="author">
     <!-- App favicon -->
     <link rel="shortcut icon" href="assets/images/fav.svg">
-
+    <!--Swiper slider css-->
+    <link href="assets/libs/swiper/swiper-bundle.min.css" rel="stylesheet" type="text/css" />
+    <!--font Awesome -->
+    <link href="assets/css/all.css" rel="stylesheet" type="text/css" />
+    <!-- Icons Css -->
+    <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css">
     <!-- Bootstrap Css -->
     <!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
     <link href="assets/css/bootstrap.rtl.min.css" rel="stylesheet" type="text/css">
-    <!-- Icons Css -->
-    <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css">
     <!-- App Css-->
     <!-- <link href="assets/css/app.min.css" rel="stylesheet" type="text/css"> -->
     <link href="assets/css/appAR.css" rel="stylesheet" type="text/css">
     <!-- custom Css-->
     <link href="assets/css/custom.min.css" rel="stylesheet" type="text/css">
-
 </head>
 
 <body>
-
     <!-- top -->
     <div class="top-tagbar">
         <div class="w-100">
@@ -202,21 +202,19 @@
         <i class="ri-arrow-up-line"></i>
     </button>
     <!--end back-to-top-->
-
     <section class="ecommerce-about bg-primary">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-5">
                     <div class="text-center">
-                        <h1 class="text-white">Contact Us</h1>
-                        <p class="fs-16 mb-0 text-white-75">Let's start something great together. Get in touch with one
-                            of the team today!</p>
+                        <h1 class="text-white">اتصل بنا</h1>
+                        <p class="fs-16 mb-0 text-white-75">لنبدأ شيئًا عظيمًا معًا. تواصل مع أحد أفراد الفريق اليوم!
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
     <section class="section">
         <div class="container">
             <div class="row">
@@ -230,9 +228,8 @@
                                     </div>
                                 </div>
                                 <div class="ms-3 flex-grow-1">
-                                    <h5 class="fs-17 lh-base mb-2">Our Main Office</h5>
-                                    <p class="text-muted fs-14 mb-0">Brusneva Ul., bld. 8, appt. 34, Stavropol, Russia
-                                    </p>
+                                    <h5 class="fs-17 lh-base mb-2"> مكتبنا الرئيسي </h5>
+                                    <p class="text-muted fs-14 mb-0"> الرياض شارع جرير </p>
                                 </div>
                             </div>
                         </div>
@@ -246,28 +243,13 @@
                                     </div>
                                 </div>
                                 <div class="ms-3 flex-grow-1">
-                                    <h5 class="fs-17 lh-base mb-2">Phone Number</h5>
-                                    <p class="text-muted fs-14 mb-0">+(234) 12345 67890<br> 888-0123-4567 (Toll free)
-                                    </p>
+                                    <h5 class="fs-17 lh-base mb-2"> رقم الهاتف </h5>
+                                    <p class="text-muted fs-14 mb-0"> +(966)1234567890 </p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="card border border-opacity-25">
-                        <div class="card-body p-4">
-                            <div class="d-flex">
-                                <div class="avatar-sm flex-shrink-0">
-                                    <div class="avatar-title bg-success-subtle text-success rounded fs-17">
-                                        <i class="bi bi-newspaper"></i>
-                                    </div>
-                                </div>
-                                <div class="ms-3 flex-grow-1">
-                                    <h5 class="fs-17 lh-base mb-2">Fax</h5>
-                                    <p class="text-muted fs-14 mb-0">1-234-567-8900</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
                     <div class="card border border-opacity-25">
                         <div class="card-body p-4">
                             <div class="d-flex">
@@ -277,59 +259,58 @@
                                     </div>
                                 </div>
                                 <div class="ms-3 flex-grow-1">
-                                    <h5 class="fs-17 lh-base mb-2">Email</h5>
-                                    <p class="text-muted fs-14 mb-0">email@email.com</p>
+                                    <h5 class="fs-17 lh-base mb-2">البريد الإلكتروني</h5>
+                                    <p class="text-muted fs-14 mb-0">example@example.com</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-
                 <div class="col-lg-8">
                     <div class="custom-form card p-4 p-lg-5">
                         <form name="myForm" action="#!">
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="text-center mb-4">
-                                        <h3 class="text-capitalize">Get In Touch with us for more Information</h3>
+                                        <h3 class="text-uppercase">اتصل بنا لمزيد من المعلومات</h3>
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group mt-3">
-                                        <label for="nameInput" class="form-label">Name<span
+                                        <label for="nameInput" class="form-label">الاسم<span
                                                 class="text-danger">*</span></label>
                                         <input name="nameInput" id="nameInput" type="text" class="form-control"
-                                            placeholder="Enter name">
+                                            placeholder="ادخل الاسم">
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group mt-3">
-                                        <label for="emailInput" class="form-label">Email<span
+                                        <label for="emailInput" class="form-label">البريد الإلكتروني<span
                                                 class="text-danger">*</span></label>
                                         <input name="emailInput" id="emailInput" type="email" class="form-control"
-                                            placeholder="Enter email">
+                                            placeholder="ادخل البريد الإلكتروني">
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
                                     <div class="form-group mt-3">
-                                        <label for="subjectInput" class="form-label">Subject<span
+                                        <label for="subjectInput" class="form-label">الموضوع<span
                                                 class="text-danger">*</span></label>
                                         <input type="text" class="form-control" id="subjectInput"
-                                            placeholder="Enter Subject..">
+                                            placeholder="ادخل الموضوع..">
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
                                     <div class="form-group mt-3">
-                                        <label for="messageInput" class="form-label">Message<span
+                                        <label for="messageInput" class="form-label">الرسالة<span
                                                 class="text-danger">*</span></label>
                                         <textarea name="messageInput" id="messageInput" rows="4" class="form-control"
-                                            placeholder="Enter message..."></textarea>
+                                            placeholder="ادخل الرسالة..."></textarea>
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
                                     <div class="text-end mt-4">
-                                        <button type="submit" id="submit" name="submit" class="btn btn-primary">Send
-                                            Message <i
+                                        <button type="submit" id="submit" name="submit" class="btn btn-primary">إرسال
+                                            الرسالة <i
                                                 class="bi bi-arrow-right-short align-middle fs-16 ms-1"></i></button>
                                     </div>
                                 </div>
@@ -340,14 +321,13 @@
             </div>
         </div>
     </section>
-
     <section>
         <div class="container-fluid px-0">
             <div class="row g-0">
                 <div class="col-lg-12">
                     <div class="map">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3024.4645962375394!2d-74.01354043428768!3d40.7077878458095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sSoHo%2094%20Broadway%20St%20New%20York%2C%20NY%201001!5e0!3m2!1sen!2sin!4v1669110084163!5m2!1sen!2sin"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d463878.29488595825!2d46.82252880000001!3d24.725191849999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2f03890d489399%3A0xba974d1c98e79fd5!2z2KfZhNix2YrYp9i2INin2YTYs9i52YjYr9mK2Kk!5e0!3m2!1sar!2seg!4v1688458316988!5m2!1sar!2seg"
                             class="w-100" height="400" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
@@ -355,8 +335,6 @@
             </div>
         </div>
     </section>
-
-    <!-- footer -->
     <!-- footer -->
     <section class="section footer-landing pb-0">
         <div class="container">
@@ -433,14 +411,17 @@
             </div>
         </div>
     </section>
-
     <!-- JAVASCRIPT -->
     <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/libs/simplebar/simplebar.min.js"></script>
     <script src="assets/js/plugins.js"></script>
-
-    <!-- menu js -->
+    <!-- isotope-layout -->
+    <script src="assets/libs/isotope-layout/isotope.pkgd.min.js"></script>
+    <!--Swiper slider js-->
+    <script src="assets/libs/swiper/swiper-bundle.min.js"></script>
+    <!-- Countdown js -->
     <script src="assets/js/frontend/menu.init.js"></script>
+    <script src="assets/js/frontend/custom.js"></script>
 </body>
 
 </html>
