--- a/confirmation.html
+++ b/confirmation.html
@@ -3,17 +3,21 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Order Completed | Recruitment world Recruitment world</title>
+    <title>Recruitment world</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="Recruitment world" name="description">
     <meta content="Nami" name="author">
     <!-- App favicon -->
     <link rel="shortcut icon" href="assets/images/fav.svg">
+    <!--Swiper slider css-->
+    <link href="assets/libs/swiper/swiper-bundle.min.css" rel="stylesheet" type="text/css" />
+    <!--font Awesome -->
+    <link href="assets/css/all.css" rel="stylesheet" type="text/css" />
+    <!-- Icons Css -->
+    <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css">
     <!-- Bootstrap Css -->
     <!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
     <link href="assets/css/bootstrap.rtl.min.css" rel="stylesheet" type="text/css">
-    <!-- Icons Css -->
-    <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css">
     <!-- App Css-->
     <!-- <link href="assets/css/app.min.css" rel="stylesheet" type="text/css"> -->
     <link href="assets/css/appAR.css" rel="stylesheet" type="text/css">
@@ -203,11 +207,11 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-center d-flex align-items-center justify-content-between">
-                        <h4 class="text-white mb-0">Order Confirm</h4>
+                        <h4 class="text-white mb-0"> طلب مؤكد </h4>
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb breadcrumb-light justify-content-center mb-0 fs-15">
-                                <li class="breadcrumb-item"><a href="#!">Shop</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">Confirmation</li>
+                                <li class="breadcrumb-item"><a href="#!"> طلب استقدام </a></li>
+                                <li class="breadcrumb-item active" aria-current="page">التأكيد</li>
                             </ol>
                         </nav>
                     </div>
@@ -226,15 +230,13 @@
                                 <img src="assets/images/success-img.png" alt="" class="w-50">
                             </div>
                             <div class="text-center mt-5 pt-1">
-                                <h4 class="mb-3 text-capitalize">Your Order Is Completed !</h4>
-                                <p class="text-muted mb-2">You will receive an order confirmation email with details of
-                                    your order.</p>
-                                <p class="text-muted mb-0">Order ID: 267676GHERT105467</p>
+                                <h4 class="mb-3 text-capitalize">تم إتمام طلبك بنجاح!</h4>
+                                <p class="text-muted mb-2">سوف تتلقى رسالة تأكيد الطلب بالبريد الإلكتروني تحتوي على
+                                    تفاصيل طلبك.</p>
+                                <p class="text-muted mb-0">رقم الطلب : GHERT105467</p>
                                 <div class="mt-4 pt-2 hstack gap-2 justify-content-center">
-                                    <a href="order-history.html" class="btn btn-primary btn-hover">View Order <i
-                                            class="ri-arrow-right-line align-bottom ms-1"></i></a>
-                                    <a href="index.html" class="btn btn-soft-danger btn-hover">Back To Home <i
-                                            class="ri-home-4-line align-bottom ms-1"></i></a>
+                                    <a href="order-history.html" class="btn btn-primary btn-hover">عرض التفاصيل </a>
+                                    <a href="index.html" class="btn btn-soft-danger btn-hover">العودة للصفحة الرئيسية </a>
                                 </div>
                             </div>
                         </div>
@@ -243,85 +245,6 @@
             </div>
         </div>
     </section>
-    <section class="section bg-light bg-opacity-25"
-        style="background-image: url('assets/images/ecommerce/bg-effect.png');background-position: center; background-size: cover;">
-        <div class="container">
-            <div class="row align-items-center justify-content-between">
-                <div class="col-lg-6">
-                    <div>
-                        <p class="fs-15 text-uppercase fw-medium"><span class="fw-semibold text-danger">25% Up to</span>
-                            off all Products</p>
-                        <h1 class="lh-base text-capitalize mb-3">Stay home &amp; get your daily needs from our shop</h1>
-                        <p class="fs-15 mb-4 pb-2">Start You'r Daily Shopping with <a href="#!"
-                                class="link-info fw-medium">Recruitment world</a></p>
-                        <form action="#!">
-                            <div class="position-relative ecommerce-subscript">
-                                <input type="email" class="form-control rounded-pill" placeholder="Enter your email">
-                                <button type="submit" class="btn btn-info btn-hover rounded-pill">Subscript Now</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="mt-4 mt-lg-0">
-                        <img src="assets/images/ecommerce/subscribe.png" alt="" class="img-fluid">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--end conatiner-->
-    </section>
-    <section class="position-relative py-5">
-        <div class="container">
-            <div class="row gy-4">
-                <div class="col-lg-3 col-sm-6">
-                    <div class="d-flex align-items-center gap-3">
-                        <div class="flex-shrink-0">
-                            <img src="assets/images/ecommerce/fast-delivery.png" alt="" class="avatar-sm">
-                        </div>
-                        <div class="flex-grow-1">
-                            <h5 class="fs-15">Fast &amp; Secure Delivery</h5>
-                            <p class="text-muted mb-0">Tell about your service.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="d-flex align-items-center gap-3">
-                        <div class="flex-shrink-0">
-                            <img src="assets/images/ecommerce/returns.png" alt="" class="avatar-sm">
-                        </div>
-                        <div class="flex-grow-1">
-                            <h5 class="fs-15">2 Days Return Policy</h5>
-                            <p class="text-muted mb-0">No question ask.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="d-flex align-items-center gap-3">
-                        <div class="flex-shrink-0">
-                            <img src="assets/images/ecommerce/guarantee-certificate.png" alt="" class="avatar-sm">
-                        </div>
-                        <div class="flex-grow-1">
-                            <h5 class="fs-15">Money Back Guarantee</h5>
-                            <p class="text-muted mb-0">Within 5 business days</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="d-flex align-items-center gap-3">
-                        <div class="flex-shrink-0">
-                            <img src="assets/images/ecommerce/24-hours-support.png" alt="" class="avatar-sm">
-                        </div>
-                        <div class="flex-grow-1">
-                            <h5 class="fs-15">24 X 7 Service</h5>
-                            <p class="text-muted mb-0">Online service for customer</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- footer -->
     <!-- footer -->
     <section class="section footer-landing pb-0">
         <div class="container">
@@ -402,8 +325,11 @@
     <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/libs/simplebar/simplebar.min.js"></script>
     <script src="assets/js/plugins.js"></script>
-    <!-- Masonry plugin -->
-    <!-- <script src="assets/libs/masonry-layout/masonry.pkgd.min.js"></script> -->
-    <!-- landing-index js -->
+    <!-- isotope-layout -->
+    <script src="assets/libs/isotope-layout/isotope.pkgd.min.js"></script>
+    <!--Swiper slider js-->
+    <script src="assets/libs/swiper/swiper-bundle.min.js"></script>
+    <!-- Countdown js -->
     <script src="assets/js/frontend/menu.init.js"></script>
+    <script src="assets/js/frontend/custom.js"></script>
 </body>
