--- a/product-list-left.html
+++ b/product-list-left.html
@@ -201,7 +201,7 @@
     </button>
     <!--end back-to-top-->
     <section class="ecommerce-about"
-        style="background-image: url('assets/images/profile-bg.jpg'); background-size: cover;background-position: center;">
+        style="background-image: url('assets/images/s3.webp'); background-size: cover;background-position: center;">
         <div class="bg-overlay bg-primary" style="opacity: 0.85;"></div>
         <div class="container">
             <div class="row justify-content-center">
