--- a/about-us.html
+++ b/about-us.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>About Us | Recruitment world Recruitment world</title>
+    <title>About Us | عالم الاستقدام عالم الاستقدام</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Recruitment world" name="description">
+    <meta content="عالم الاستقدام" name="description">
     <meta content="Nami" name="author">
     <!-- App favicon -->
     <link rel="shortcut icon" href="assets/images/fav.svg">
@@ -387,7 +387,7 @@
                 <div class="col-lg-6">
                     <div class="text-center">
                         <h1 class="text-white lh-base text-capitalize">Don't miss out on special offers</h1>
-                        <p class="text-white-75 fs-15 mb-4 pb-2">Never Miss Anything From Recruitment world By Signing
+                        <p class="text-white-75 fs-15 mb-4 pb-2">Never Miss Anything From عالم الاستقدام By Signing
                             Up To Our Newsletter.</p>
                         <form action="#!">
                             <div class="position-relative ecommerce-subscript">
