--- a/account.html
+++ b/account.html
@@ -3,21 +3,22 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Recruitment world</title>
+    <title>عالم الاستقدام</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Recruitment world" name="description">
+    <meta content="عالم الاستقدام" name="description">
     <meta content="Nami" name="author">
-    <!-- App favicon -->
     <link rel="shortcut icon" href="assets/images/fav.svg">
+    <!-- Bootstrap Css -->
+    <!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
+    <link href="assets/css/bootstrap.rtl.min.css" rel="stylesheet" type="text/css">
     <!--Swiper slider css-->
     <link href="assets/libs/swiper/swiper-bundle.min.css" rel="stylesheet" type="text/css" />
     <!--font Awesome -->
     <link href="assets/css/all.css" rel="stylesheet" type="text/css" />
     <!-- Icons Css -->
     <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css">
-    <!-- Bootstrap Css -->
-    <!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
-    <link href="assets/css/bootstrap.rtl.min.css" rel="stylesheet" type="text/css">
+    <!-- fancybox Css -->
+    <link href="assets/css/jquery.fancybox.min.css" rel="stylesheet" type="text/css">
     <!-- App Css-->
     <!-- <link href="assets/css/app.min.css" rel="stylesheet" type="text/css"> -->
     <link href="assets/css/appAR.css" rel="stylesheet" type="text/css">
@@ -222,7 +223,7 @@
                                 </div>
                             </div>
                             <div class="ms-md-auto">
-                                <!-- <p class="mb-0">Recruitment world Member Since Jan 2020</p> -->
+                                <!-- <p class="mb-0">عالم الاستقدام Member Since Jan 2020</p> -->
                                 <a href="product-list.html" class="btn btn-success btn-hover">
                                     <i class="fa-light fa-briefcase me-1"></i>
                                     طلب استقدام
@@ -309,7 +310,7 @@
                                                                 Email Address
                                                             </td>
                                                             <td class="fw-medium">
-                                                                raque@Recruitment world.com
+                                                                raque@عالم الاستقدام.com
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -786,7 +787,7 @@
                                                                 Address</label>
                                                             <input type="email" class="form-control" id="emailInput"
                                                                 placeholder="Enter your email"
-                                                                value="raque@Recruitment world.com">
+                                                                value="raque@عالم الاستقدام.com">
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-4">
@@ -1032,7 +1033,7 @@
                                             <h6><span class="text-muted fw-normal">Legal Registration No:</span> <span
                                                     id="legal-register-no">987654</span></h6>
                                             <h6><span class="text-muted fw-normal">Email:</span> <span
-                                                    id="email">Recruitment world@Nami.com</span></h6>
+                                                    id="email">عالم الاستقدام@Nami.com</span></h6>
                                             <h6><span class="text-muted fw-normal">Website:</span> <a
                                                     href="https://Nami.com/" class="link-primary" target="_blank"
                                                     id="website">www.Nami.com</a></h6>
@@ -1171,7 +1172,7 @@
                                                     <td class="text-end">$172.04</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Discount <small class="text-muted">(Recruitment world50)</small>
+                                                    <td>Discount <small class="text-muted">(عالم الاستقدام50)</small>
                                                     </td>
                                                     <td class="text-end">- $206.45</td>
                                                 </tr>
@@ -1303,7 +1304,7 @@
             </div>
         </div>
     </section>
-    <!-- JAVASCRIPT -->
+<!-- JAVASCRIPT -->
     <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/libs/simplebar/simplebar.min.js"></script>
     <script src="assets/js/plugins.js"></script>
@@ -1313,6 +1314,7 @@
     <script src="assets/libs/swiper/swiper-bundle.min.js"></script>
     <!-- Countdown js -->
     <script src="assets/js/frontend/menu.init.js"></script>
+    <script src="assets/js/jquery.fancybox.min.js"></script>
     <script src="assets/js/frontend/custom.js"></script>
 </body>
 
