--- a/email-order-success-2.html
+++ b/email-order-success-2.html
@@ -4,9 +4,9 @@
 <head>
 
     <meta charset="utf-8">
-    <title>Order Success 2 Email Template | Recruitment world Recruitment world</title>
+    <title>Order Success 2 Email Template | عالم الاستقدام عالم الاستقدام</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Recruitment world" name="description">
+    <meta content="عالم الاستقدام" name="description">
     <meta content="Nami" name="author">
     <!-- App favicon -->
     <link rel="shortcut icon" href="assets/images/fav.svg">
@@ -171,7 +171,7 @@
                     </tr>
                     <tr>
                         <td colspan="3" style="padding: 12px 8px; font-size: 15px;">
-                            Discount (Recruitment world50)
+                            Discount (عالم الاستقدام50)
                         </td>
                         <td style="padding: 12px 8px; font-size: 15px;text-align: end; ">
                             <h6
@@ -203,7 +203,7 @@
             <div style="padding: 1.5rem;background-color: #fafafa;">
                 <div style="text-align: center;">
                     <p style="color: #878a99; margin: 0;font-weight: 500;">
-                        <script>document.write(new Date().getFullYear())</script> © Recruitment world.
+                        <script>document.write(new Date().getFullYear())</script> © عالم الاستقدام.
                     </p>
                 </div>
             </div>
@@ -398,7 +398,7 @@
                     </tr>
                     <tr>
                         <td colspan="3" style="padding: 12px 8px; font-size: 15px;">
-                            Discount (Recruitment world50)
+                            Discount (عالم الاستقدام50)
                         </td>
                         <td style="padding: 12px 8px; font-size: 15px;text-align: end; ">
                             <h6
@@ -431,7 +431,7 @@
             <div style="padding: 1.5rem;background-color: #0f3146;">
                 <div style="text-align: center;font-weight: 500;">
                     <p style="color: #878a99 !important; margin: 0;">
-                        <script>document.write(new Date().getFullYear())</script> © Recruitment world.
+                        <script>document.write(new Date().getFullYear())</script> © عالم الاستقدام.
                     </p>
                 </div>
             </div>
