--- a/auth-pass-change.html
+++ b/auth-pass-change.html
@@ -3,21 +3,22 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Recruitment world</title>
+    <title>عالم الاستقدام</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="Recruitment world" name="description">
+    <meta content="عالم الاستقدام" name="description">
     <meta content="Nami" name="author">
-    <!-- App favicon -->
     <link rel="shortcut icon" href="assets/images/fav.svg">
+    <!-- Bootstrap Css -->
+    <!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
+    <link href="assets/css/bootstrap.rtl.min.css" rel="stylesheet" type="text/css">
     <!--Swiper slider css-->
     <link href="assets/libs/swiper/swiper-bundle.min.css" rel="stylesheet" type="text/css" />
     <!--font Awesome -->
     <link href="assets/css/all.css" rel="stylesheet" type="text/css" />
     <!-- Icons Css -->
     <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css">
-    <!-- Bootstrap Css -->
-    <!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
-    <link href="assets/css/bootstrap.rtl.min.css" rel="stylesheet" type="text/css">
+    <!-- fancybox Css -->
+    <link href="assets/css/jquery.fancybox.min.css" rel="stylesheet" type="text/css">
     <!-- App Css-->
     <!-- <link href="assets/css/app.min.css" rel="stylesheet" type="text/css"> -->
     <link href="assets/css/appAR.css" rel="stylesheet" type="text/css">
@@ -95,7 +96,7 @@
             </footer>
         </div>
     </section>
-    <!-- JAVASCRIPT -->
+<!-- JAVASCRIPT -->
     <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/libs/simplebar/simplebar.min.js"></script>
     <script src="assets/js/plugins.js"></script>
@@ -105,6 +106,7 @@
     <script src="assets/libs/swiper/swiper-bundle.min.js"></script>
     <!-- Countdown js -->
     <script src="assets/js/frontend/menu.init.js"></script>
+    <script src="assets/js/jquery.fancybox.min.js"></script>
     <script src="assets/js/frontend/custom.js"></script>
 
 </body>
